<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/rasp">
        <menu>
            <item
                android:id="@+id/first_k"
                android:icon="@drawable/first"
                android:title="@string/first_k" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/AGB"
            android:icon="@drawable/agb"
            android:title="@string/AGB" />
        <item
            android:id="@+id/TAR"
            android:icon="@drawable/tor"
            android:title="@string/TAP" />
        <item
            android:id="@+id/PGB"
            android:icon="@drawable/pgb"
            android:title="@string/PGB" />
        <item
            android:id="@+id/BDA"
            android:icon="@drawable/bda"
            android:title="@string/BDA" />
        <item
            android:id="@+id/VMS"
            android:icon="@drawable/vms"
            android:title="@string/VMS" />
        <item
            android:id="@+id/PZT"
            android:icon="@drawable/pzt"
            android:title="@string/PZT" />
        <item
            android:id="@+id/AEP"
            android:icon="@drawable/aep"
            android:title="@string/AEP" />
        <item
            android:id="@+id/BSK"
            android:icon="@drawable/bsk"
            android:title="@string/BSB" />
    </group>
</menu>

